--- a/source/MovingMars.tex
+++ b/source/MovingMars.tex
@@ -145,7 +145,7 @@ keepaspectratio]{cover/MovingMarsfront.jpg}%
 
 \vspace{5 mm}
 \noindent
-Moving Mars by David P. Hyland-Wood, published by David P. Hyland-Wood, PO Box 4028, St Lucia South 4067 QLD Australia
+Moving Mars by David P. Hyland-Wood
 
 \vspace{5 mm}
 \noindent
@@ -153,15 +153,14 @@ www.hyland-wood.org
 
 \vspace{5 mm}
 \noindent
-Copyright \textcopyright { }2021 by David P. Hyland-Wood
+Copyright \textcopyright { }2024 by David P. Hyland-Wood
 
 \vspace{5 mm}
 \noindent
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.3
-or any later version published by the Free Software Foundation;
-with the Invariant Sections being  "Acknowledgements", "Dedication",
-and "History", no Front-Cover Texts, and no Back-Cover Texts.
+Moving Mars \copy 2024 by David Paul Hyland-Wood is licensed under CC BY-NC-ND 4.0. To view a copy of this license, visit https://creativecommons.org/licenses/by-nc-nd/4.0/
+
+\vspace{5 mm}
+\noindent
 For additional permission requests, write to the publisher, using ``Attention: Permissions Coordinator,'' at books@hyland-wood.org.
 
 \vspace{5 mm}
