Stepping Stone initial commit
- Stepping Stone partial content
- Arrival partial outline
- Minor other updates

--- a/source/Aapo/Aapo.tex
+++ b/source/Aapo/Aapo.tex
@@ -40,7 +40,7 @@ I stood up. I knew I couldn't risk looking at my parents. What had I done? Guang
 
 I dropped the slate on a pillow, unused to being separated from it even when I was working on the farm. I followed her out into the hall, and could hear Mum crying. She had already figured out what the likely outcome of this was, then.
 
-The priest went to the end of the building, down the two flights of stairs, and right into the vegetable gardens. We weaved through the beds for about a hundred meters, and then to the edge of the planted fields. In the old days, we might have grown corn, wheat, peas, or soybeans in the bare dirt. Our fields held trays stacked five deep held up by plastic poles. Each top tray held a type of hydrogenotrophic bacteria that made amino acids, and then proteins. The three middle ones were sealed, and partially pressurised, to make edible, burnable, and lubricating oils from similar types of bacteria. The bottom ones held yeasts that our outlying kitchens would use to make breads.
+The priest went to the end of the building, down the two flights of stairs, and right into the oil gardens. We weaved through the beds for about a hundred meters, and then to the edge of the planted fields. In the old days, we might have grown corn, wheat, peas, or soybeans in the bare dirt. Our fields held trays stacked five deep held up by plastic poles. Each top tray held a type of hydrogenotrophic bacteria that made amino acids, and then proteins. The three middle ones were sealed, and partially pressurised, to make edible, burnable, and lubricating oils from similar types of bacteria. The bottom ones held yeasts that our outlying kitchens would use to make breads.
 
 Eventually we came to a small, unplanted rise with a bench on it. The Stebling twins were already there. They jumped up at the unexpected sight of a priest. We took ownership of the bench as they ran to tell the news to the rest of the dunbar.
 
@@ -88,7 +88,7 @@ Her eyes refocused on me. ``Can you think of an algorithm that takes two lambda 
 
 ``Very well. We can go speak with your parents now.''
 
-With relief, I followed Guang back through the vegetable beds, and up the front steps into our building. Our dunbar wasn't rich, but it wasn't poor either. Our front hall had a reasonable number of awards for productivity from the local temple. Our History hung on the wall opposite the front door, pictures of generations past that had built the building and the farm. We could easily feed ourselves and all the others who operated factories in the surrounding hills. From the top of the steps you could see the fields spreading out around us with their stacked trays.
+With relief, I followed Guang back through the oil bins, and up the front steps into our building. Our dunbar wasn't rich, but it wasn't poor either. Our front hall had a reasonable number of awards for productivity from the local temple. Our History hung on the wall opposite the front door, pictures of generations past that had built the building and the farm. We could easily feed ourselves and all the others who operated factories in the surrounding hills. From the top of the steps you could see the fields spreading out around us with their stacked trays.
 
 We might not be rich, but we could take pride in the work we did. It was useful work. That's what Elder Mattias and our old people said. But it was boring work. I preferred the games on my slate.
 
