--- a/source/FirstRock/FirstRock.tex
+++ b/source/FirstRock/FirstRock.tex
@@ -8,14 +8,13 @@
 
 The spacecraft awoke.
 
-TODO: Entering orbit of the First Rock.
-
 \begin{itemize}
-\item Thawing the frozen hydrazine tank via thermal control heaters.
-\item Thawing pipes and the thrusters was next.
+\item Thawing the frozen hydrazine tank via solar passes at perisol since the thermal control heaters required too much power.
+\item Thawing pipes and the thrusters.
 \item Slow down into orbit around the first rock.
 \end{itemize}
 
+TODO: Entering orbit of the First Rock.
 
 % If the chapter ends in an odd page, you may want to skip having the page
 %  number in the empty page
