--- a/source/MovingMars.tex
+++ b/source/MovingMars.tex
@@ -266,7 +266,11 @@ David P. Hyland-Wood
 % Chapter 3
 \include{Underway/Underway}
 % Chapter 4
+\include{SteppingStone/SteppingStone}
+% Chapter 5
 \include{FirstRock/FirstRock}
+% Chapter 6
+\include{Arrival/Arrival}
 
 % Backmatter
 %-------------------------------------------------------------------------------
