--- a/source/front-back-matter/abouttheauthor.tex
+++ b/source/front-back-matter/abouttheauthor.tex
@@ -12,7 +12,7 @@
 \addcontentsline{toc}{chapter}{About the Author} % Add to TOC
 
 
-Dr. David Hyland-Wood has been a ship navigator, deep sea salvage engineer, aerospace engineer, university researcher, lecturer, and software entrepreneur. David holds university degrees in mechanical, aeronautical, astronautical, and software engineering. He lives in Brisbane, Australia. This is his first work of fiction.
+Dr. David Hyland-Wood has been a ship navigator, deep sea salvage engineer, aerospace engineer, university researcher, lecturer, and software entrepreneur. David holds university degrees in mechanical, aeronautical, astronautical, and software engineering. He lives in Mission Beach, Australia. This is his first work of fiction.
 
 David may be reached via \href{hyland-wood.org}{hyland-wood.org}.
 \vspace*{\fill}
