Completed draft of Chapter 4
Completed draft of chapter 4. Added partial outlines to chapters 6-8.

--- a/source/MovingMars.tex
+++ b/source/MovingMars.tex
@@ -270,6 +270,10 @@ David P. Hyland-Wood
 % Chapter 5
 \include{FirstRock/FirstRock}
 % Chapter 6
+\include{Eliza/Eliza}
+% Chapter 7
+\include{Perturbation/Perturbation}
+% Chapter 8
 \include{Arrival/Arrival}
 
 % Backmatter
