--- a/source/SteppingStone/SteppingStone.tex
+++ b/source/SteppingStone/SteppingStone.tex
@@ -16,7 +16,7 @@ My questions remained unanswered since they were unasked. Guang approached the h
 
 I dug around the seat until I got the seatbelt fastened. My legs hung over the seat but did not touch the floor. Guang helped me to close the door.
 
-``Now Aapo, it is very important that you listen to this. Do not touch the flight controls. The stick in front of you with the handle at the top is called the cyclic. it changes the angle of attack of the main rotor blades \textit{cyclically} during rotation. That creates different amounts of lift as the blades spin around so it allows us to change direction. The handle to the right of your seat is called the collective. It also changes the angle of attack of the main rotor blades, but this time it does so \textit{collectively}, or all together. It allows us to go up and down. The foot pedals control the speed of the tail rotor blades, so we can spin around our vertical axis. Do you understand?''
+``Now Aapo, it is very important that you listen to this. Do not touch the flight controls. The stick in front of you with the handle at the top is called the cyclic. it changes the angle of attack of the main rotor blades \textit{cyclically} during rotation. That creates different amounts of lift as the blades spin around so it allows us to change direction. The handle to the left of your seat is called the collective. It also changes the angle of attack of the main rotor blades, but this time it does so \textit{collectively}, or all together. It allows us to go up and down. The foot pedals control the speed of the tail rotor blades, so we can spin around our vertical axis. Do you understand?''
 
 I appreciated being talked to like an adult. Guang wanted me to understand! That was a great change from the way almost everyone else treated me with the exception of old Elder Mattias. She kind of spoke like him.
 
@@ -28,11 +28,77 @@ I had played with the flight simulator embedded into Curveball. The graphics in 
 
 My family had to make the trip to the temple every Saturday along with the rest of the dunbar. Only Elder Mattias and a rotating skeleton crew got to stay home to keep the farm running. We would pile into the farm trucks and make the journey together. There we would meet up with twelve other dunbars for the weekly service. Mostly the kids would run around together after the service while the adults would meet with their counterparts to conduct any business that needed doing. Then we would eat and go home. The trip would take us almost a half hour in the old farm trucks, half of which was loading and unloading.
 
-We covered the distance in no time. Less than five minutes after we left we were already on the ground at the side of the temple. A novice, or maybe a coadjutor based on her taupe robes and shaved head, ducked under the blades and opened the door for Guang. I struggled a bit with my seatbelt, fiddled with the door handle and climbed down. Someone secured the door behind me and I rushed to catch up with Guang.
+We covered the distance in no time. Less than five minutes after we left we were already on the ground at the side of the temple. A novice, with her taupe robes and shaved head, ducked under the blades and opened the door for Guang. I struggled a bit with my seatbelt, fiddled with the door handle and climbed down. Someone secured the door behind me and I rushed to catch up with Guang.
 
-TODO: The temple. He is given fresh sandles and the clean, black robes of a student.
+We entered the temple but not through the front door. There was a door in the back of the massive building looking tiny and slightly out of place against the huge white western wall. Guang at the camera set into the door and a faint click made it obvious the door had unlocked.
 
-TODO: He meets the Pulpiteer and several Coadjutors. They discuss Elder Mattias and it becomes clear that he was deeply involved in the founding of the Eliza with Garbi Elizondo. Mattias was consulted by Guang before acting on the Curveball data.
+I didn't know what to expect from the back rooms of a temple. Even on my slate I had only ever seen the front hall, kitchen, and nave. I certainly didn't expect a long, featureless hallway. Doors on both sides led to who knows where. It had never occurred to me how much bigger the building was from the public parts.
+
+Halfway down on the left, Guang opened a door and motioned me inside. I was shocked to see a bunch of other kids ranging from twelve to one older girl of maybe sixteen sitting around a large conference table. Except for the sixteen year old, they looked too small for the room.
+
+Guang closed the door without entering. I suddenly felt very lost.
+
+``Hi. What's your name?'', the older girl asked. She had apparently taken charge of the younger kids.
+
+``Uh, I'm Aapo, from the Elaio Dunbar.'' I sort of recognised a few of them from temple Saturdays.
+
+``Oh, right, The oil makers. Grab a seat. Unless you need a toilet or something?''
+
+I sat in one on the chairs close to the door and surveilled my new companions. I vaguely knew that I should say hello and ask for their names but I didn't. It wasn't just because I was overwhelmed, although I was, it just wasn't what I did. I stared at them and they stared at me.
+
+``What do we do now?'', asked one of the other girls. She was maybe fourteen and had long black hair tied back with a clip. She looked more curious than scared. There were a few others that looked scared.
+
+``Well, I don't know'', said the older girl, ``but I'll go ask if anyone needs a toilet or anything. Other than that I guess we just wait until everyone is here.'' She turned to me and said, ``My name is Elisa from the Provata Dunbar. You probably remember me from the barbecue last month. I made the souvlaki.''
+
+I nodded even though I didn't really remember her.
+
+I reached for my slate again and pulled my hand back into my lap when I remembered that I had left it at home. I really didn't like being without it, especially when in a room full of awkward kids with nothing to do.
+
+``Umm'', I said without realising it. A few of the kids looked up at me and then back at Elisa.
+
+The door opened and a young man came in swiftly. He had taupe robes and a pencil-thin black stripe at the bottom of the sleeves where a cuff might go if he had cuffs. A coadjutor, an ordained temple priest. ``Right then, follow me, please.'' He stepped back into the hall and waited for us to get up. 
+
+Elisa stood up to lead the way. She looked mildly annoyed when a couple of the younger kids closer to the door got there first. I was not among them.
+
+The even dozen of us filed out into the hallway. Elisa had made it to the number two position and was looking for her opportunity to jump into first place.
+
+So, there were thirteen dunbars associated with our temple but only twelve kids. Does that mean that there was one kid taken from each dunbar but someone was missing, or maybe one dunbar didn't produce an acceptable candidate this year, or something else? Of course we had all seen kids be picked up by priests, but definitely not every year. I could only remember a couple from Elaio being taken.
+
+If I was more social, I might have asked around to see if any of the other kids were from the same dunbar. That wasn't going to happen, so I waited to see if any of them acted like they already knew each other well. From my spot at the back of line I could see three girls with their heads close together, whispering frantically.
+
+The coadjutor led us to a door on the right almost at the end of the long hallway. There was a long counter that ran the length of the room to the next door. Behind the counter were long rows of shelves perpendicular to the counter. When it was finally my turn, a novice looked me up and down and handed me a package. ``Take this and follow the others", he said.
+
+The coadjutor was at the next set of doors. ``Girls to the left, boys to the right'', he gestured. I entered a sort of locker room with benches along the walls. ``Get dressed and put your old clothes down the chute.''
+
+Some of the others already had new robes on, like what the priests wear only a bit shorter and jet black. The package was a wrapped up robe with underwear and sandals inside. The first two boys were reluctantly putting their old clothes, their last and only connection to home, down a chute mounted in the far wall.
+
+The robe fit me but the sandals chafed a bit. I thought about asking for a different set but thought better about it. I'd probably get used to them. It felt strange to have plastic sandals instead of the leather ones I had grown up with. We all looked very different in our new black robes, less like farm and factory kids but certainly not like priests. It was harder to tell the kids apart than when they were dressed normally.
+
+The coadjutor stuck his head in the door. ``Come on, hurry up.'' I shoved my old pants, shirt and sandals down the chute and hurried back into the hall. I had never felt more naked. The robes swished my legs in a most unfamiliar way.
+
+Everyone else was filing into yet another door when I reached the hallway. I ran a few steps to join the end of the line. We went up a long flight of stairs and stepped through into the cavernous nave but from a side door I had never noticed. We were near the front and there were about a half dozen priests in taupe and two in yellow. The small group of us was like a drop in the ocean of the huge room.
+
+One of the yellow robes was our pulpiteer. I didn't know his name. It had never occurred to me to ask. The other was Guang. As we filed into the front, I heard the pulpiteer ask, ``Is that him?'' Guang nodded. She seemed to be looking at me. ``That should be interesting if Mattias is right.''
+
+``Mattias is always right", Guang softly. I wouldn't have heard her if I hadn't been passing right in front of her at the time. ``I don't think he has made a mistake since he lost his hair.''
+
+What? Among priests, only Ecclesicals had hair. Could Elder Mattias have been the head priest of a sanctuary before his retirement? We were taught that even senior priests returned to dunbars in their retirement. Could ours be \textit{that} senior? I tried and failed to envision him with purple robes on the proms.
+
+Everyone else had taken a seat on the mats in front of the dais, so I moved to the end of the row and did the same. The pulpiteer cleared his throat and raised his voice without using the microphone they used on Saturdays.
+
+``Welcome, children of Eliza. This is a special gathering, isn't it?'' He didn't expect an answer. ``Each of you has been recommended by their neighbourhood priest and approved by this, our temple. You can expect full and exciting careers in service to Eliza.''
+
+There was no indication of choice in the matter. The Eliza had called and was to obeyed. I thought of my mum's tears as she realised that her understanding of my future had been radically remade by a priest in a yellow robe.
+
+I missed some of the pulpiteer's stock speech, but the next bit caught my ear like Mrs. Reynolds when I stole food between meals.
+
+``Not since the founding of Eliza more than eighty years ago, when our own Elder Mattias was appointed one of the first prelates, have we had such a promising group of young minds join our ranks.''
+
+So! Elder Mattias was a Founder! Only the closest associates of Garbi Elizondo had been appointed as the first batch of prelates. He also must be older than we had thought. How do they live so long? Would I get that chance now that I was going to be on the inside?
+
+My mind was buzzing with the possibilities. I became so engrossed in them that I didn't hear another word the pulpiteer said.
+
+I stood when everyone else did, and followed them out. We processed down the length of the nave, out the front door this time, and into a much bigger people mover than our small size warranted. I heard one of the girls whisper that we were headed for an airport.
 
 % If the chapter ends in an odd page, you may want to skip having the page
 %  number in the empty page
