--- a/source/FirstRock/FirstRock.tex
+++ b/source/FirstRock/FirstRock.tex
@@ -6,15 +6,12 @@
 
 \chapter{First Rock}
 
-The spacecraft awoke.
+Two hundred and three Earth orbits later, having miraculously missed each of the spacecraft in low Earth orbit and most of the space junk at its perigee, Albatenius felt the gravity of a near-Earth asteroid. The asteroid's pull was ever so subtle, but it was importantly, critically present.
 
-\begin{itemize}
-\item Thawing the frozen hydrazine tank via solar passes at perisol since the thermal control heaters required too much power.
-\item Thawing pipes and the thrusters.
-\item Slow down into orbit around the first rock.
-\end{itemize}
+Another few hundred orbits. Silent, waiting, being.
 
-TODO: Entering orbit of the First Rock.
+The NEO didn't just pull on Albatenius. The spacecraft also pulled back, so slightly it could only be noticed over a very long timeframe. Naively, it was a classic three-body problem of spacecraft, rock and Earth. In reality, it was far more complex due to all the other small bodies scattered near their orbits. It was certainly nondeterministic over a long enough period. There was no way to tell what would happen. But one could observe and, eventually, carefully, react.
+
 
 % If the chapter ends in an odd page, you may want to skip having the page
 %  number in the empty page
