--- a/source/Perturbation/Perturbation.tex
+++ b/source/Perturbation/Perturbation.tex
@@ -6,10 +6,22 @@
 
 \chapter{Perturbation}
 
-TODO:
+Albatenius continued to work its subtle magic on the little rock for hundreds of more orbits. Each time they almost touched a bit more pull occurred. Finally, the shape of the gravitational dance could begin to be seen. There was an opening, but much more influence would be needed.
+
+Fortunately, humanity has been terribly untidy in its stewardship of Earth's orbit.
+
+The average age of a spacecraft in low Earth orbit may be measured in weeks, months or at best a few years. The tenuous Thermosphere is nearly half oxygen and half helium at those altitudes with sensible amounts of hydrogen thrown in for good measure. Oxygen and helium atoms slam into spacecraft at speeds of kilometers per second, imparting momentum even with their tiny masses. It is the oxygen, four times heavier than helium, that is responsible for most of the impact. Their drag slowly pulls LEO spacecraft to a fiery end.
+
+Up in the upper reaches, the Exosphere, nothing but the lightest of the elements may be found, a bit of hydrogen and a bit of helium. There is enough that some atoms of both have been sensed in the vicinity of the Moon. Note enough, though, to deorbit satellites from such high vantage points. Spacecraft in now little-used geosynchronous orbit are mostly junk, replaced by craft that are simply closer to Earth and thus have less communications delay with the surface.
+
+MEO, medium height, spacecraft escape most of the bombardment and serve in the happy medium between survivability and distance. Medium Earth orbit is now the home for most of humanity's satellites.
+
+Dead and nearly dead spacecraft abound in GEO and beyond in the slightly higher orbits used to park geriatric craft in the golden days of spaceflight when GEO was synonymous with ``valuable''.
 
 \begin{itemize}
-\item The tiny NEO is diverted into a horseshoe orbit around Earth. The asteroid throws the spacecraft out of Earth orbit toward the asteroid belt.
+\item{Several other spacecraft are engaged.}
+\item The tiny NEO is diverted into a horseshoe orbit around Earth.}
+\item{The asteroid throws Albatenius out of Earth orbit toward the asteroid belt.
 \end{itemize}
 
 % If the chapter ends in an odd page, you may want to skip having the page
