--- a/source/Perturbation/Perturbation.tex
+++ b/source/Perturbation/Perturbation.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% Chapter:  Pertubation
+% Chapter:  Perturbation
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -20,8 +20,8 @@ Dead and nearly dead spacecraft abound in GEO and beyond in the slightly higher 
 
 \begin{itemize}
 \item{Several other spacecraft are engaged.}
-\item The tiny NEO is diverted into a horseshoe orbit around Earth.}
-\item{The asteroid throws Albatenius out of Earth orbit toward the asteroid belt.
+\item{The tiny NEO is diverted into a horseshoe orbit around Earth.}
+\item{The asteroid throws Albatenius out of Earth orbit toward the asteroid belt.}
 \end{itemize}
 
 % If the chapter ends in an odd page, you may want to skip having the page
