--- a/source/Perturbation/Perturbation.tex
+++ b/source/Perturbation/Perturbation.tex
@@ -12,7 +12,7 @@ Fortunately, humanity has been terribly untidy in its stewardship of Earth's orb
 
 The average age of a spacecraft in low Earth orbit may be measured in weeks, months or at best a few years. The tenuous Thermosphere is nearly half oxygen and half helium at those altitudes with sensible amounts of hydrogen thrown in for good measure. Oxygen and helium atoms slam into spacecraft at speeds of kilometers per second, imparting momentum even with their tiny masses. It is the oxygen, four times heavier than helium, that is responsible for most of the impact. Their drag slowly pulls LEO spacecraft to a fiery end.
 
-Up in the upper reaches, the Exosphere, nothing but the lightest of the elements may be found, a bit of hydrogen and a bit of helium. There is enough that some atoms of both have been sensed in the vicinity of the Moon. Note enough, though, to deorbit satellites from such high vantage points. Spacecraft in now little-used geosynchronous orbit are mostly junk, replaced by craft that are simply closer to Earth and thus have less communications delay with the surface.
+Up in the upper reaches, the Exosphere, nothing but the lightest of the elements may be found, a bit of hydrogen and a bit of helium. There is enough that some atoms of both have been sensed in the vicinity of the Moon. Not enough, though, to deorbit satellites from such high vantage points. Spacecraft in now little-used geosynchronous orbit are mostly junk, replaced by craft that are simply closer to Earth and thus have less communications delay with the surface.
 
 MEO, medium height, spacecraft escape most of the bombardment and serve in the happy medium between survivability and distance. Medium Earth orbit is now the home for most of humanity's satellites.
 
