--- a/source/Arrival/Arrival.tex
+++ b/source/Arrival/Arrival.tex
@@ -8,8 +8,10 @@
 
 TODO: Aapo arrives at a Sanctuary for further education. He sees but does not meet the Ecclesical at the greeting ceremony. He learns to think without his slate, but is scheduled to receive his first embed. He is warned that many robotic surgeries will be required to keep up his embed as he grows.
 
-- Note similarity of Elisa's name with Eliza and resolve.
-- Aapo's first tute: See https://library.fiveable.me/key-terms/intro-astronomy/libration re libration of the Earth's Moon.
+\begin{itemize}
+\item Note similarity of Elisa's name with Eliza and resolve.
+\item Aapo's first tute: See \url{https://library.fiveable.me/key-terms/intro-astronomy/libration} re libration of the Earth's Moon.
+\end{itemize}
 
 
 % If the chapter ends in an odd page, you may want to skip having the page
