--- a/source/Perturbation/Perturbation.tex
+++ b/source/Perturbation/Perturbation.tex
@@ -8,20 +8,21 @@
 
 Albatenius continued to work its subtle magic on the little rock for hundreds of more orbits. Each time they almost touched a bit more pull occurred. Finally, the shape of the gravitational dance could begin to be seen. There was an opening, but much more influence would be needed.
 
-Fortunately, humanity has been terribly untidy in its stewardship of Earth's orbit.
+Fortunately, humanity had been terribly untidy in its stewardship of Earth's orbit.
 
-The average age of a spacecraft in low Earth orbit may be measured in weeks, months or at best a few years. The tenuous Thermosphere is nearly half oxygen and half helium at those altitudes with sensible amounts of hydrogen thrown in for good measure. Oxygen and helium atoms slam into spacecraft at speeds of kilometers per second, imparting momentum even with their tiny masses. It is the oxygen, four times heavier than helium, that is responsible for most of the impact. Their drag slowly pulls LEO spacecraft to a fiery end.
+Dead and nearly dead spacecraft abound in geosynchronous equatorial orbit. There were even more still in slightly higher orbits used to park geriatric craft in the golden days of spaceflight when GEO was synonymous with ``valuable''. Nearly all of Earth's satellites had moved down the gravity well to the so-called medium and low Earth orbits to speed communications. Not even the newest of technologies could get around the speed of light.
 
-Up in the upper reaches, the Exosphere, nothing but the lightest of the elements may be found, a bit of hydrogen and a bit of helium. There is enough that some atoms of both have been sensed in the vicinity of the Moon. Note enough, though, to deorbit satellites from such high vantage points. Spacecraft in now little-used geosynchronous orbit are mostly junk, replaced by craft that are simply closer to Earth and thus have less communications delay with the surface.
+In the upper reaches of the Exosphere, roughly a tenth of the way to the Moon, nothing but the lightest of the elements may be found, a bit of hydrogen and a bit of helium. There was little to disturb the roughly two thousand abandoned satellites.
 
-MEO, medium height, spacecraft escape most of the bombardment and serve in the happy medium between survivability and distance. Medium Earth orbit is now the home for most of humanity's satellites.
+95\% were really dead. They were completely unresponsive. They had probably lost all ability to generate electrical power so no communication was possible. Some might have just had electronics failures with their computers or radios. About twenty were still actively used by someone, so taking control of them would be risky. Forty five were classified as being at their end of life, but were still routinely checked by their controllers. Sixteen wouldn't respond to control queries. A surprisingly few used strong encryption. Those must have been the military ones. Twelve of those that were accessible had no thruster fuel at all and no ability to reorient their solar panels.
 
-Dead and nearly dead spacecraft abound in GEO and beyond in the slightly higher orbits used to park geriatric craft in the golden days of spaceflight when GEO was synonymous with ``valuable''.
+That left a round half dozen. Six multi-tonne spacecraft that were responsive to commands and had some degree of manueverability. Albatenius was about to have sisters.
+
+%The average age of a spacecraft in low Earth orbit may be measured in weeks, months or at best a few years. The tenuous Thermosphere is nearly half oxygen and half helium at those altitudes with sensible amounts of hydrogen thrown in for good measure. Oxygen and helium atoms slam into spacecraft at speeds of kilometers per second, imparting momentum even with their tiny masses. It is the oxygen, four times heavier than helium, that is responsible for most of the impact. Their drag slowly pulls LEO spacecraft to a fiery end.
 
 \begin{itemize}
-\item{Several other spacecraft are engaged.}
 \item{The tiny NEO is diverted into a horseshoe orbit around Earth.}
-\item{The asteroid throws Albatenius out of Earth orbit toward the asteroid belt.}
+\item{The asteroid throws Albatenius and two others out of Earth orbit toward the asteroid belt.}
 \end{itemize}
 
 % If the chapter ends in an odd page, you may want to skip having the page
