Named satellites (probably temporarily)

--- a/source/Perturbation/Perturbation.tex
+++ b/source/Perturbation/Perturbation.tex
@@ -18,7 +18,21 @@ In the upper reaches of the Exosphere, roughly a tenth of the way to the Moon, n
 
 That left a round half dozen. Six multi-tonne spacecraft that were responsive to commands and had some degree of manueverability. Albatenius was about to have sisters.
 
+TODO: Introduce the newly acquired birds:
+
+\begin{itemize}
+\item Brasilsat E6: A defunct Brazilian communications satellite.
+\item Inmarsat 17: A defunct television broadcasting satellite.
+\item Turksat 12A: A defunct Turkish communications satellite.
+\item Paksat-5: A defunct Pakistani communications satellite.
+\item Hotbird 16B: A defunct Eutelsat on-orbit spare intended to serve communications in Africa. It was never used.
+\item Yaogan 72-01F: A defunct Chinese on-orbit inspection satellite suspected of carrying anti-satellite weapons.
+\end{itemize}
+
+
 %The average age of a spacecraft in low Earth orbit may be measured in weeks, months or at best a few years. The tenuous Thermosphere is nearly half oxygen and half helium at those altitudes with sensible amounts of hydrogen thrown in for good measure. Oxygen and helium atoms slam into spacecraft at speeds of kilometers per second, imparting momentum even with their tiny masses. It is the oxygen, four times heavier than helium, that is responsible for most of the impact. Their drag slowly pulls LEO spacecraft to a fiery end.
+
+TODO: Next
 
 \begin{itemize}
 \item{The tiny NEO is diverted into a horseshoe orbit around Earth.}
