Progress on Chapter 6

--- a/source/Eliza/Eliza.tex
+++ b/source/Eliza/Eliza.tex
@@ -6,12 +6,86 @@
 
 \chapter{Eliza}
 
+The people mover was big, with stacks of bunks in the back and two toilets. The driver was a twenty-something coadjutor. Her taupe robes had a thin black stipe at the bottom of the sleeves and her head was shaved smooth. We obediently filed in and took seats near the front as she directed.
+
+``Hello everyone'', said the driver. ``My name is Pilar and like you I come from the dunbars near here. I was collected just over fifteen years ago.''
+
+If she was trying to make us feel comfortable, I don't think it worked. There was a lot of squirming in seats and reaching for absent slates. The people mover was already underway.
+
+``We will be driving all night, so please feel free to make use of the toilets and bunks whenever you like. However, your education starts now. I will be asking questions and expecting answers. Your participation will be noted.''
+
+Ok, that sounded like a priest. Coadjutors were in training, but she had certainly adopted their ways. She may have come from the dunbars like us but she had been under the direct care of Eliza for more years than she had worked on a farm.
+
+``Elisa, why do we live in dunbars?''
+
+Elisa's head snapped up. You could almost feel her panic. She had been asked a direct question by a priest in public, didn't have a ready answer, and knew immediately that her self-appointed leadership over the younger children would be eroded if she failed to give a decent answer.
+
+``Umm, well'', she stammered, ``We live in dunbars to maintain social stability.''
+
+``Yes, that's certainly true. It is also true that you hear that most Saturdays. Why do dunbars support social stability?''
+
+Elisa wasn't sure whether she had been praised or insulted. That was the way of priests. She tried again, trying  carefully to avoid the obvious pitfalls.
+
+``Dunbars are capped at 150 people, although the number can temporarily vary a bit up or down. That number ensures that we can all know each other well.''
+
+``Do you know everyone's name in your dunbar?''
+
+``Yes, of course, except I don't talk to some of them all that often.''
+
+``Like whom?''
+
+``I don't get along with some of my friends' mothers. Our neighbourhood priest told me that was natural and as long as I did my chores it would work out.''
+
+``Has it?''
+
+``I suppose so. We don't all like each other, but our dunbar works well together. We have never missed a harvest, or a production quota. We have received some awards, even. Everyone seems to find their own ways to work with people even if they don't spend time together outside of their assigned tasks.''
+
+``Name someone you don't like.''
+
+``Umm, well, there's Maria, that's my friend Sofia's mum. She doesn't like my hanging out in their room with Maria when we're not working so we go other places.''
+
+``Do you ever see Maria outside of their family's room?''
+
+``Of course. I'm often assigned to Maria's team in the kitchen and sometimes during weeding or harvest.''
+
+``Do you get along with her then?''
+
+``Well enough, as long as I do my work.''
+
+``So that's the purpose of a dunbar. When you know people well enough, you can figure out ways to get along. That's especially true when you have to live with them.  Ok, so how many dunbars are there? Alanna?''
+
+A black haired girl my age looked up. Her hands fiddled incessantly as she reached for her missing slate again and again. ``I have no idea'', she said.
+
+``Does anyone else know?''
+
+I did a quick calculation in my head. The world's population was reportedly about five billion, down significantly from its peak a couple of centuries ago. About half the world was estimated to be ruled by Eliza. Two and a half billion divided by 150 was a big number.
+
+``Aapo?'' Pilar spoke into the silence. Maybe she could see the look on my face as I chewed on the estimate. the people mover was driving itself so she had swivelled her seat around to face us during the tutorial.
+
+``At a very rough guess, half the world divided by 150 would be about sixteen and a half million dunbars. That seems like too high a number, although it would be a decent upper bound. There must be less than that because it wouldn't count anyone in the Eliza hierarchy, but I don't know how big that is. There would need to be a lot of coordination between the dunbars, right?''
+
+``You're not as far off as you might think, Aapo. That's pretty good given the number of unknowns. In fact, most of the big cities are organised under a different principle, which you will learn about later. Only the manufacturing, farming, and services sectors are organised in dunbars. So, there are about nine million dunbars so far. More are being created every day.''
+
+Pilar was silent for a moment. ``Let's have short break. When we start again, I'll tell you a bit more about Eliza's history so you will understand more about what you will see when we get there.''
+
+``Pardon me, Pilar", said a beefy boy near the back. ``Where are we going, exactly?''
+
+``Exactly where is not something you need to know, especially since you won't recognise the name and can't look it up right now. I am taking you to another transport. Eventually you will be going to Eliza's headquarters to start your temple education.''
+
+``How does that work?'' asked the boy.
+
+``Let's have that break now. Everything will become clear in time.''
+
+There was a general shifting around as some of the kids made their way to the toilets. One even laid down in a bunk, probably a bit sick from the unusual movement of the people mover. It tended to sway side to side much more than a harvester.
+
+Pilar let plenty of time pass. Without our slates, nobody knew what to do with our free time. We couldn't play games, read, or look up any answers to the million questions running through our heads. Once everyone was through the toilets, Pilar walked back to the boy in the bunk and gave him a pill and a glass of water. She took out meal boxes from a compartment in the back and asked Elisa to help her pass them out. Elisa looked thrilled to have something to do.
+
 TODO:
 
 \begin{itemize}
 \item Describe the church and how it came to be.
 \item Discussion between senior members regarding the new cohort? (Show, don't tell)
-\item Model the senior leadership of the Eliza like in Plato's Republic. This includes relationships to children, foreign policy.
+\item Model the senior leadership of Eliza like in Plato's Republic. This includes relationships to children, foreign policy.
 \item What happened to the nukes? Many degraded without maintenance to replace, some bought by Eliza/Garbi Elizondo.
 \end{itemize}
 
