--- a/source/GravitysChild.tex
+++ b/source/GravitysChild.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%% HAUB.tex %%%%%%%%%%%%%%%%%%%%%%%
 %
-% Root file for: Gravity's Child (D. Hyland-Wood) November 2016
+% Root file for: Gravity's Child (D. Hyland-Wood)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
