--- a/source/SteppingStone/SteppingStone.tex
+++ b/source/SteppingStone/SteppingStone.tex
@@ -96,9 +96,11 @@ I missed some of the pulpiteer's stock speech, but the next bit caught my ear li
 
 So! Elder Mattias was a Founder! Only the closest associates of Garbi Elizondo had been appointed as the first batch of prelates. He also must be older than we had thought. How do they live so long? Would I get that chance now that I was going to be on the inside?
 
+I reached for my slate, only to find for the hundredth time that of course it wasn't there. I felt naked without it. I stopped my hand from going for it over and over again. I had wanted to search for any public information about Mattias from the days of the founding.
+
 My mind was buzzing with the possibilities. I became so engrossed in them that I didn't hear another word the pulpiteer said.
 
-I stood when everyone else did, and followed them out. We processed down the length of the nave, out the front door this time, and into a much bigger people mover than our small size warranted. I heard one of the girls whisper that we were headed for an airport.
+I stood when everyone else did, and followed them out. We processed down the length of the nave, out the front door this time, and into a much bigger people mover than our small size warranted. I heard one of the girls whisper that we were headed for a spaceport.
 
 % If the chapter ends in an odd page, you may want to skip having the page
 %  number in the empty page
