--- a/source/Aapo/Aapo.tex
+++ b/source/Aapo/Aapo.tex
@@ -38,7 +38,7 @@ I stood up. I knew I couldn't risk looking at my parents. What had I done? Guang
 
 ``No, leave it, please.''
 
-I dropped the slate on a pillow, unused to being separated from it even when I was working on the farm. I followed her out into the hall, and could hear Mum crying. She had already figured out what the likely outcome of this was, then.
+I reluctantly dropped the slate on a pillow, unused to being separated from it even when I was working on the farm. I followed her out into the hall, and could hear Mum crying. She had already figured out what the likely outcome of this was, then.
 
 The priest went to the end of the building, down the two flights of stairs, and right into the oil gardens. We weaved through the beds for about a hundred meters, and then to the edge of the planted fields. In the old days, we might have grown corn, wheat, peas, or soybeans in the bare dirt. Our fields held trays stacked five deep held up by plastic poles. Each top tray held a type of hydrogenotrophic bacteria that made amino acids, and then proteins. The three middle ones were sealed, and partially pressurised, to make edible, burnable, and lubricating oils from similar types of bacteria. The bottom ones held yeasts that our outlying kitchens would use to make breads.
 
